--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@ layout: base
 {% include sections/speakers.html %}
 {% include sections/apply.html %}
 
+{% include sections/workshop.html %}
+
 {% include sections/faq.html %}
 
 {% include sections/partners.html %}
