--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 layout: base
 ---
 
-{% include sections_2019/header.html %}
-{% include sections_2019/about.html %}
+{% include sections_2020/header.html %}
+{% include sections_2020/about.html %}
 
-{% include sections_2019/schedule.html %}
+{% include sections_2020/schedule.html %}
 
-{% include sections_2019/speakers.html %}
+{% include sections_2020/speakers.html %}
+{% include sections_2020/apply.html %}
 
-{% include sections_2019/workshop.html %}
+{% include sections_2020/workshop.html %}
 
-{% include sections_2019/faq.html %}
+{% include sections_2020/faq.html %}
 
-{% include sections_2019/partners.html %}
-{% include sections_2019/location.html %}
+{% include sections_2020/partners.html %}
+{% include sections_2020/location.html %}
