speakers and contributors added

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ layout: base
 {% include sections_2020/header.html %}
 {% include sections_2020/about.html %}
 
-<!-- {% include sections_2020/schedule.html %}
+<!-- {% include sections_2020/schedule.html %} -->
 
 {% include sections_2020/speakers.html %}
 {% include sections_2020/apply.html %}
 
-{% include sections_2020/workshop.html %} -->
+<!--{% include sections_2020/workshop.html %} -->
 
 {% include sections_2020/faq.html %}
 
