Talleres y agenda actualizados. Falta título de conferencia de Mariluz

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: base
 {% include sections_2020/speakers.html %}
 {% include sections_2020/apply.html %}
 
-<!--{% include sections_2020/workshop.html %} -->
+{% include sections_2020/workshop.html %}
 
 {% include sections_2020/faq.html %}
 
