--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: base
 {% include sections_2020/header.html %}
 {% include sections_2020/about.html %}
 
-<!-- {% include sections_2020/schedule.html %} -->
+{% include sections_2020/schedule.html %}
 
 {% include sections_2020/speakers.html %}
 {% include sections_2020/apply.html %}
